fix: spacing, gaps

--- a/frontend/assets/styles.scss
+++ b/frontend/assets/styles.scss
@@ -114,8 +114,8 @@ li::marker {
 
 // Labels
 .label {
-  font-size: 11px !important;
-  font-weight: 600 !important;
+  font-size: 0.725rem;
+  font-weight: 500;
   text-transform: uppercase;
   margin-right: 12px;
   color: var(--color-cold-night);
